Updated with final pieces of code